add usage to README

--- a/example/index.html
+++ b/example/index.html
@@ -26,7 +26,7 @@
     <h2>Result</h2>
     <textarea id="evalResult"></textarea>
     <script type="module">
-      import { Combox } from "./index.js";
+      import { Combox } from "https://unpkg.com/@syumai/combox/dist/index.js";
       const evalForm = document.getElementById("evalForm");
       const evalResult = document.getElementById("evalResult");
       const combox = new Combox();
